@@ -158,3 +158,4 @@ do
 done
 
 rm -rf $TMPDIR
+exit 0
